[gd_scene load_steps=3 format=3 uid="uid://miigpbg6n0xu"]

[ext_resource type="Script" path="res://interface/inventory/inventory_ui.gd" id="1_od8su"]
[ext_resource type="Script" path="res://interface/inventory/inventory_ui_item.gd" id="2_xvhrm"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_od8su")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="PlayerSprite" type="Sprite2D" parent="CanvasLayer/Control"]
scale = Vector2(15, 15)

[node name="Inventory" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 100.0
offset_right = 144.0
offset_bottom = 110.0

[node name="EquippedGear" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 100.0
offset_right = -159.0
offset_bottom = 135.0
grow_horizontal = 0

[node name="EquippedWeaponLabel" type="Label" parent="CanvasLayer/EquippedGear"]
layout_mode = 2
text = "Equipped Weapon"

[node name="EquippedWeapon" type="Button" parent="CanvasLayer/EquippedGear"]
layout_mode = 2
script = ExtResource("2_xvhrm")
